[tool.poetry]
name = "n8creator-cheat-sheets"
version = "0.1.0"
description = ""
authors = ["n8creator <n8creator@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"
myst-parser = "^0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
